improved visibility of the canvas zoom buttons

--- a/index.html
+++ b/index.html
@@ -290,15 +290,21 @@
 			</span>
 
 			<div class="canvas-tools" id="canvas-tools">
-				<a href="javascript:app.magnifyViewport(2)" title="Zoom in">
-					<img src="img/plus.png">
-				</a>
-				<a href="javascript:app.resetViewport()" title="Reset zoom and panning">
-					<img src="img/equals.png">
-				</a>
-				<a href="javascript:app.magnifyViewport(-2)" title="Zoom out">
-					<img src="img/minus.png">
-				</a>
+				<div class="canvas-button">
+					<a href="javascript:app.magnifyViewport(2)" title="Zoom in">
+						<img src="img/plus.png">
+					</a>
+				</div>
+				<div class="canvas-button">
+					<a href="javascript:app.resetViewport()" title="Reset zoom and panning">
+						<img src="img/equals.png">
+					</a>
+				</div>
+				<div class="canvas-button">
+					<a href="javascript:app.magnifyViewport(-2)" title="Zoom out">
+						<img src="img/minus.png">
+					</a>
+				</div>
 			</div>
 		</div>
 
