--- a/test/standalone.usecase.html
+++ b/test/standalone.usecase.html
@@ -4,7 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>test nomnoml</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png">
-  <script src="../dist/nomnoml.web.js"></script>
+  <script src="../lib/dagre.min.js"></script>
+  <script src="../dist/nomnoml.js"></script>
 </head>
 <body>
     <script id="noml" type="text/plain">
