hint about new feature

--- a/index.html
+++ b/index.html
@@ -286,6 +286,16 @@
 			</div>
 		</div>
 
+		<div class="hint">
+			<svg width="100" height="80" xmlns="http://www.w3.org/2000/svg">
+			  <g stroke="#0008" fill="none" stroke-width="5.5" stroke-linecap="round">
+			    <path d="m5,66c46,-7 69,-29 80,-51"/>
+			    <path d="m66,18c11,-3 9,-5 21,-10c12,-4 -6,23 3,31"/>
+			  </g>
+			</svg>
+			You can now have multiple diagrams!
+		</div>
+
 		<div id="linemarker"></div>
 
 		<div class="tools">
@@ -386,7 +396,7 @@
 			color: #807C72;
 		}
 		.commercial-title {
-			z-index: 3;
+			z-index: 2;
 			box-sizing: border-box;
 			position: absolute;
 			right: 20px;
@@ -407,7 +417,7 @@
 			float: right;
 		}
 		.commercial {
-			z-index: 3;
+			z-index: 2;
 			position: absolute;
 			right: 20px;
 			bottom: 20px;
