--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>nomnoml</title>
 <link rel="stylesheet" href="codemirror/codemirror.css">
 <link rel="stylesheet" href="codemirror/solarized.nomnoml.css">
-<link rel="stylesheet" href="nomnoml.css">
+<link rel="stylesheet" href="nomnoml.css?v=1">
 <link rel="shortcut icon" href="favicon.png">
 </head>
 <body>
@@ -286,7 +286,7 @@
 			</div>
 		</div>
 
-		<div class="hint">
+		<div id="file-system-hint" class="hint">
 			<svg width="100" height="80" xmlns="http://www.w3.org/2000/svg">
 			  <g stroke="#0008" fill="none" stroke-width="5.5" stroke-linecap="round">
 			    <path d="m5,66c46,-7 69,-29 80,-51"/>
@@ -484,7 +484,7 @@
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="dist/nomnoml.web.js"></script>
 	
-	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	<script src="lib/vue.min.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
