fix tooltip placement

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 				<img src="img/trash.png">
 			</a>
 
-			<tooltip-display id="tooltip"></tooltip-display>
+			<div id="tooltip"></div>
 			
 			<div class="storage-tools">
 				<span class="storage-status" v-bind:class="{ visible: isUrlStorage() }">
