test for #ranker directive

--- a/test/index.html
+++ b/test/index.html
@@ -123,6 +123,18 @@
   </div>
 
   <div class=testcase>
+    <h1>Ranker config</h1>
+    <div nomnoml=canvas>
+      <script type="text/vnd.nomnoml">
+#ranker: longest-path
+[a] -> [b]
+[a] -> [c]
+[c] -> [d]
+      </script>
+    </div>
+  </div>
+
+  <div class=testcase>
     <h1>Text heuristic</h1>
     <div nomnoml=svg>
       <script type="text/vnd.nomnoml">
