--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@
 
 		<div id="export" class="sidebar">
 			<div class="content">
-
-				<div class="file-menu">
-
+				<div export-menu class="file-menu">
 				  <a class="btn" v-bind:href="shareLink" target="_blank">
 				   <icon id=link-outline></icon> Open shareable link
 				  </a>
@@ -253,14 +251,14 @@
 				  <a class="btn" href="/" v-on:click.prevent="downloadSrc">
 				    <icon id=download></icon>  Download source
 				  </a>
+				</div>
+			</div>
+		</div>
 
-				  <a class="btn" href="/" v-on:click.prevent="test">
-				    <icon id=input-checked></icon>  Run tests
-				  </a>
+		<div id="files" class="sidebar">
+			<div class="content">
 
-				  <hr/>
-
-				  <h2>Current diagram</h2>
+				<div file-menu class="file-menu">
 				  <a href="#" class=btn v-if="isLocalFile()">
 				    <icon id=home-outline></icon> Home
 				  </a>
@@ -280,7 +278,6 @@
 				      <img src="img/trash.png">
 				    </a>
 				  </div>
-
 				</div>
 
 			</div>
@@ -310,7 +307,10 @@
 					<path d="M17 21H7a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3zM7 5a1 1 0 0 0-1 1v12c0 .6.4 1 1 1h10c.6 0 1-.4 1-1V6c0-.6-.4-1-1-1H7zm9 6H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1zm0-3H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1zm0 6H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1zm0 3H8a.5.5 0 0 1 0-1h8a.5.5 0 0 1 0 1z"/>
 				</svg>
 			</a>
-			<a href="javascript:void(0)" onclick="app.toggleSidebar('export')" title="Save this or load another diagram">
+			<a href="javascript:void(0)" onclick="app.toggleSidebar('export')" title="Export this diagram">
+				<svg version="1.2" baseProfile="tiny" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 21.312l-7.121-7.121c-1.17-1.17-1.17-3.073 0-4.242 1.094-1.094 2.978-1.138 4.121-.115v-4.834c0-1.654 1.346-3 3-3s3 1.346 3 3v4.834c1.143-1.023 3.027-.979 4.121.115 1.17 1.169 1.17 3.072 0 4.242l-7.121 7.121zm-5-10.242c-.268 0-.518.104-.707.293-.391.39-.391 1.023 0 1.414l5.707 5.707 5.707-5.707c.391-.391.391-1.024 0-1.414-.379-.379-1.035-.379-1.414 0l-3.293 3.293v-9.656c0-.551-.448-1-1-1s-1 .449-1 1v9.656l-3.293-3.293c-.189-.189-.439-.293-.707-.293z"/></svg>
+			</a>
+			<a href="javascript:void(0)" onclick="app.toggleSidebar('files')" title="Save this or load another diagram">
 				<svg version="1.2" width="24" height="24" viewBox="0 0 24 24">
 					<path d="M22.3 8h-2.4c-.4-1.2-1.5-2-2.8-2h-6c0-1.1-.9-2-2-2h-4.1c-1.7 0-3 1.3-3 3v10c0 1.7 1.3 3 3 3h12c1.7 0 3.4-1.3 3.8-3l2.2-8c.1-.6-.2-1-.7-1zm-18.3 1v-2c0-.6.4-1 1-1h4c0 1.1.9 2 2 2h6c.6 0 1 .4 1 1h-11.1c-.6 0-1.1.4-1.3 1l-1.6 6.3v-7.3zm14.9 7.5c-.2.8-1.1 1.5-1.9 1.5h-12s-.4-.2-.2-.8l1.9-7c0-.1.2-.2.3-.2h13.7l-1.8 6.5z"/>
 				</svg>
@@ -489,7 +489,8 @@
 	
 	<script>
 		var app = new App(nomnoml, CodeMirror, saveAs, _.throttle, _.debounce)
-		FileMenu('.file-menu', app)
+		ExportMenu('[export-menu]', app)
+		FileMenu('[file-menu]', app)
 		StorageTools('.storage-tools', app)
 	</script>
 	
