--- a/index.html
+++ b/index.html
@@ -259,25 +259,25 @@
 			<div class="content">
 
 				<div file-menu class="file-menu">
-				  <a href="#" class=btn v-if="isLocalFile()">
-				    <icon id=home-outline></icon> Home
-				  </a>
-				  <a href="/" class=btn v-on:click.prevent="discardCurrent">
-				    <icon id=trash></icon> Discard current
-				  </a>
-				  <a class="btn" href="/" v-on:click.prevent="saveAs">
-				    <icon id=document-add></icon>  Save to local file...
-				  </a>
+					<a href="#" class=btn v-if="isLocalFile()">
+						<icon id=home-outline></icon> Home
+					</a>
+					<a href="/" class=btn v-on:click.prevent="discardCurrent">
+						<icon id=trash></icon> Discard current
+					</a>
+					<a class="btn" href="/" v-on:click.prevent="saveAs">
+						<icon id=document-add></icon>  Save to local file...
+					</a>
 
-				  <hr/>
+					<hr/>
 
-				  <h2>Local files</h2>
-				  <div v-for="item in items()" class=file-entry>
-				    <a v-bind:href="itemPath(item)">{{item.name}}</a>
-				    <a v-on:click="discard(item)" title="Discard this diagram">
-				      <img src="img/trash.png">
-				    </a>
-				  </div>
+					<h2>Local files</h2>
+					<div v-for="item in items()" v-bind:class="{ 'file-entry': true, 'active': isActive(item) }">
+					<a v-bind:href="itemPath(item)">{{item.name}}</a>
+					<a v-on:click="discard(item)" title="Discard this diagram">
+					<img src="img/trash.png">
+						</a>
+					</div>
 				</div>
 
 			</div>
