--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 				  </a>
 
 				  <a class="btn" href="/" v-on:click.prevent="downloadSrc">
-				    <icon id=download></icon>  Download source
+				    <icon id=download-outline></icon>  Download source
 				  </a>
 				</div>
 			</div>
@@ -259,12 +259,6 @@
 			<div class="content">
 
 				<div file-menu class="file-menu">
-					<a href="#" class=btn v-if="isLocalFile()">
-						<icon id=home-outline></icon> Home
-					</a>
-					<a href="/" class=btn v-on:click.prevent="discardCurrent">
-						<icon id=trash></icon> Discard current
-					</a>
 					<a class="btn" href="/" v-on:click.prevent="saveAs">
 						<icon id=document-add></icon>  Save to local file...
 					</a>
@@ -272,10 +266,15 @@
 					<hr/>
 
 					<h2>Local files</h2>
+
+					<div v-bind:class="{ 'file-entry': true, active: isAtHome() }">
+						<a href="#"><icon id=home-outline></icon> Home</a>
+					</div>
+
 					<div v-for="item in items()" v-bind:class="{ 'file-entry': true, 'active': isActive(item) }">
-					<a v-bind:href="itemPath(item)">{{item.name}}</a>
-					<a v-on:click="discard(item)" title="Discard this diagram">
-					<img src="img/trash.png">
+						<a v-bind:href="itemPath(item)">{{item.name}}</a>
+						<a v-on:click="discard(item)" title="Discard this diagram">
+							<img src="img/trash.png">
 						</a>
 					</div>
 				</div>
