docs: update to include new directives

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
 				#stroke: #33322E<br>
 				#title: filename<br>
 				#zoom: 1<br>
+				#acyclicer: greedy<br>
+				#ranker: network-simplex | tight-tree | longest-path<br>
 
 				<h2>Custom classifier styles</h2>
 				<label>A directive that starts with "." define a classifier style. The style is written as a space separated list of modifiers and key/value pairs.</label>
