Drag and Drop for svg working

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
 	<script>
 		var handleSVG = (files)=>{
-			if(files.length !== 1) return alert('Only upload a single SVG.');
+			if(files.length !== 1) return alert('Only upload a single file.');
 			reader = new FileReader();
 			reader.onload = ()=>{
 				if(!app.loadSVG(reader.result)) alert("SVG did not have nomnoml code embedded within it.");
@@ -523,6 +523,16 @@
 		FileMenu('[file-menu]', app)
 		StorageTools('.storage-tools', app)
 		metrics.track('visit', { files: app.filesystem.files().length })
+
+
+		app.editor.on('drop', (cm,dragEvent)=>{
+			var files = dragEvent.dataTransfer.files;
+			if(files.length !== 1) return alert('Only upload a single file.')
+			if(files[0].type == "image/svg+xml"){
+				dragEvent.preventDefault();
+				handleSVG(files);
+			}
+		})
 	</script>
 
 	<script>
