document embedding of source in svg files

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
 				<p>Downloaded image files will be given the filename in the <tt>#title</tt> directive.
 				</p>
 
+				<p>Downloaded SVG files will have the source code embedded. Open an exported SVG file to load it's nomnoml source.
+				</p>
+
 				<p>The editor supports a subset of <i>Sublime Text's</i> <a href="https://codemirror.net/demo/sublime.html" target="_blank">keymappings</a>.
 				</p>
 
