--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<p>The canvas can be panned and zoomed by dragging and scrolling in the right hand third of the canvas.
 				</p>
 
-				<img src="img/interaction-tutorial.png" alt="interaction tutorial">
+				<img src="img/interaction-tutorial.svg" alt="interaction tutorial">
 
 				<p>Downloaded image files will be given the filename in the <tt>#title</tt> directive.
 				</p>
@@ -287,7 +287,9 @@
 					<div v-for="item in items()" v-bind:class="{ 'file-entry': true, 'active': isActive(item) }">
 						<a v-bind:href="itemPath(item)">{{item.name}}</a>
 						<a v-on:click="discard(item)" title="Discard this diagram">
-							<img src="img/trash.png">
+							<svg width="24" height="24" viewBox="0 0 24 24">
+								<path d="M18 7h-1v-1c0-1.1-.8-2-2-2h-7c-1.1 0-2 .8-2 2v1h-1c-.5 0-1 .4-1 1s.4 1 1 1v8c0 2.2 1.7 4 4 4h5c2.2 0 4-1.7 4-4v-8c.5 0 1-.4 1-1s-.4-1-1-1zm-10-1h7v1h-7v-1zm8 11c0 1.1-.8 2-2 2h-5c-1.1 0-2-.8-2-2v-8h9v8zM8.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM10.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM12.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM14.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5z"/>
+							</svg>
 						</a>
 					</div>
 				</div>
@@ -328,7 +330,9 @@
 				</svg>
 			</a>
 			<a href="javascript:app.discardCurrentGraph()" title="Discard this diagram">
-				<img src="img/trash.png">
+				<svg width="24" height="24" viewBox="0 0 24 24">
+						<path d="M18 7h-1v-1c0-1.1-.8-2-2-2h-7c-1.1 0-2 .8-2 2v1h-1c-.5 0-1 .4-1 1s.4 1 1 1v8c0 2.2 1.7 4 4 4h5c2.2 0 4-1.7 4-4v-8c.5 0 1-.4 1-1s-.4-1-1-1zm-10-1h7v1h-7v-1zm8 11c0 1.1-.8 2-2 2h-5c-1.1 0-2-.8-2-2v-8h9v8zM8.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM10.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM12.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM14.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5z"/>
+				</svg>
 			</a>
 
 			<div id="tooltip"></div>
@@ -350,17 +354,23 @@
 			<div class="canvas-tools" id="canvas-tools">
 				<div class="canvas-button">
 					<a href="javascript:app.magnifyViewport(2)" title="Zoom in">
-						<img src="img/plus.png">
+						<svg version="1.2" width="24" height="24" viewBox="0 0 24 24">
+							<path d="M18 10h-4v-4c0-1.1-.8-2-2-2s-2 .8-2 2l.0 4h-4.0c-1.1 0-2 .8-2 2s.8 2 2 2l4.0-.0-.0 4.0c0 1.1.8 2 2 2s2-.8 2-2v-4.0l4 .0c1.1 0 2-.8 2-2s-.8-2-2-2z"/>
+						</svg>
 					</a>
 				</div>
 				<div class="canvas-button">
 					<a href="javascript:app.resetViewport()" title="Reset zoom and panning">
-						<img src="img/equals.png">
+						<svg version="1.2" width="24" height="24" viewBox="0 0 24 24">
+							<path d="M18 7h-12c-1.1 0-2 .8-2 2s.8 2 2 2h12c1.1 0 2-.8 2-2s-.8-2-2-2zM18 14h-12c-1.1 0-2 .8-2 2s.8 2 2 2h12c1.1 0 2-.8 2-2s-.8-2-2-2z"/>
+						</svg>
 					</a>
 				</div>
 				<div class="canvas-button">
 					<a href="javascript:app.magnifyViewport(-2)" title="Zoom out">
-						<img src="img/minus.png">
+						<svg version="1.2" width="24" height="24" viewBox="0 0 24 24">
+							<path d="M18 11h-12c-1.1 0-2 .8-2 2s.8 2 2 2h12c1.1 0 2-.8 2-2s-.8-2-2-2z"/>
+						</svg>
 					</a>
 				</div>
 			</div>
