fix bug in svg text color

--- a/test/index.html
+++ b/test/index.html
@@ -67,7 +67,7 @@
     <div nomnoml=svg>
       <script type="text/vnd.nomnoml">
 #font: Arial
-#.hello: underline
+#.hello: underline stroke=teal fill=#ffa
 [Pirate|
   eyeCount: Int|
   [a]--[b]
@@ -202,7 +202,7 @@
   </div>
 
   <div class=testcase>
-    <h1>NodeJS render</h1>
+    <h1>CLI output</h1>
     <img src="output.node-test.svg">
   </div>
 
