--- a/index.html
+++ b/index.html
@@ -295,16 +295,6 @@
 			</div>
 		</div>
 
-		<div id="file-system-hint" class="hint">
-			<svg width="100" height="80" xmlns="http://www.w3.org/2000/svg">
-				<g stroke="#0008" fill="none" stroke-width="5.5" stroke-linecap="round">
-					<path d="m5,66c46,-7 69,-29 80,-51"/>
-					<path d="m66,18c11,-3 9,-5 21,-10c12,-4 -6,23 3,31"/>
-				</g>
-			</svg>
-			You can now have multiple diagrams!
-		</div>
-
 		<div id="linemarker"></div>
 
 		<div class="tools">
@@ -441,22 +431,25 @@
 			border-radius: 15px;
 			box-shadow: 0 5px 20px rgba(0,0,0,.2);
 		}
+		@media (max-width: 600px) {
+			.commercial-title, .commercial { display: none; }
+		}
 	</style>
 	<div class="commercial-title" id="commercial-title">
 		<div class="commercial-dismiss" onclick="closeCommercial()">&times;</div>
-		<a href="https://itunes.apple.com/se/app/nebula-sky/id1268430694&mt=8">
+		<a href="https://apps.apple.com/se/app/nebula-sky/id1268430694">
 			<img src="commercial/appstore.svg">
 			I have made a game,<br/>try Nebula Sky now!
 		</a>
 	</div>
-	<div class="commercial show1" id="commercial" onclick="cycleCommercial()">
+	<a class="commercial show1" id="commercial" href="https://apps.apple.com/se/app/nebula-sky/id1268430694">
 		<div class="commercial-shadowcaster"></div>
 		<img class="commercial-frame" src="commercial/iphone-frame.png">
 		<img class="commercial-screen screen0" src="commercial/menu.png">
 		<img class="commercial-screen screen1" src="commercial/radar.png">
 		<img class="commercial-screen screen2" src="commercial/shipyard.png">
 		<img class="commercial-screen screen3" src="commercial/surface.png">
-	</div>
+	</a>
 	<script>
 		var commercialPage = 0
 		function closeCommercial() {
