edges included in graph bounding box calculation

--- a/test/index.html
+++ b/test/index.html
@@ -202,6 +202,19 @@
   </div>
 
   <div class=testcase>
+    <h1>Graph size</h1>
+    <div nomnoml=canvas>
+      <script type="text/vnd.nomnoml">
+[a] - [foo]
+[foo] - [b]
+[a] - [bar]
+[bar] - [b]
+[a] - [b]
+      </script>
+    </div>
+  </div>
+
+  <div class=testcase>
     <h1>CLI output</h1>
     <img src="output.node-test.svg">
   </div>
