add #background directive

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 				#gutter: 5<br>
 				#edgeMargin: 0<br>
 				#edges: hard | rounded<br>
+				#background: transparent<br>
 				#fill: #eee8d5; #fdf6e3<br>
 				#fillArrows: false<br>
 				#font: Calibri<br>
