improved test case for non-boxy shapes

--- a/test/index.html
+++ b/test/index.html
@@ -108,14 +108,13 @@
   </div>
 
   <div class=testcase>
-    <h1>Custom shapes</h1>
+    <h1>Non-boxy shapes</h1>
     <div nomnoml=canvas>
       <script type="text/vnd.nomnoml">
-[<start> start] -:> [<database> database]
-[<choice> choice] <:-o [<end> end]
+[<choice> choice|first|second] <:-o [<end> end]
 [<usecase> usecase|row 2|row 3] -:> [<actor> actor]
+[end] -:> [<database> database]
 [actor] -> [<frame>frame|[note]]
-[database] -> [<package>pack|contents]
       </script>
     </div>
   </div>
