--- a/test/index.html
+++ b/test/index.html
@@ -108,6 +108,24 @@
   </div>
 
   <div class=testcase>
+    <h1>Table</h1>
+    <div nomnoml=canvas>
+      <script type="text/vnd.nomnoml">
+[<table> Long table title|
+  nuts  | 89    ||
+  bolts | 18
+]
+
+[<table> shapes|
+  number  | 5 ||
+  capsule | [<state>cell] |
+  auto;row;break
+]
+      </script>
+    </div>
+  </div>
+
+  <div class=testcase>
     <h1>Non-boxy shapes</h1>
     <div nomnoml=canvas>
       <script type="text/vnd.nomnoml">
