showcase <table> in initial example

--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
   [beard]-:>[foul mouth]
 ]
 
+[<table>mischief | bawl | sing || yell | drink]
+
 [<abstract>Marauder]<:--[Pirate]
 [Pirate]- 0..7[mischief]
 [jollyness]->[Pirate]
