--- a/index.html
+++ b/index.html
@@ -248,60 +248,11 @@
 		</div>
 
 		<div id="export" class="sidebar">
-			<div class="content">
-				<div export-menu class="file-menu">
-					<a class="btn" v-bind:href="shareLink" target="_blank">
-						<icon id=link-outline></icon> Open shareable link
-					</a>
-
-					<a class="btn" href="/" v-on:click.prevent="downloadPng">
-						<icon id=camera-outline></icon> Download PNG
-					</a>
-
-					<a class="btn" href="/" v-on:click.prevent="downloadSvg">
-						<icon id=image-outline></icon> Download SVG with source
-					</a>
-
-					<a class="btn" href="/" v-on:click.prevent="downloadSrc">
-						<icon id=download-outline></icon> Download source
-					</a>
-				</div>
-			</div>
+			<div class="content" export-menu></div>
 		</div>
 
 		<div id="files" class="sidebar">
-			<div class="content">
-
-				<div file-menu class="file-menu">
-
-					<label class="btn">
-						<icon id=image-outline></icon> Open SVG with source...
-						<input type="file" accept="image/svg+xml" v-on:change="loadSvg">
-					</label>
-
-					<a class="btn" href="/" v-on:click.prevent="saveAs">
-						<icon id=document-add></icon> Save to local file...
-					</a>
-
-					<hr/>
-
-					<h2>Local files</h2>
-
-					<div v-bind:class="{ 'file-entry': true, active: isAtHome() }">
-						<a href="#"><icon id=home-outline></icon> Home</a>
-					</div>
-
-					<div v-for="item in items()" v-bind:class="{ 'file-entry': true, 'active': isActive(item) }">
-						<a v-bind:href="itemPath(item)">{{item.name}}</a>
-						<a v-on:click="discard(item)" title="Discard this diagram">
-							<svg width="24" height="24" viewBox="0 0 24 24">
-								<path d="M18 7h-1v-1c0-1.1-.8-2-2-2h-7c-1.1 0-2 .8-2 2v1h-1c-.5 0-1 .4-1 1s.4 1 1 1v8c0 2.2 1.7 4 4 4h5c2.2 0 4-1.7 4-4v-8c.5 0 1-.4 1-1s-.4-1-1-1zm-10-1h7v1h-7v-1zm8 11c0 1.1-.8 2-2 2h-5c-1.1 0-2-.8-2-2v-8h9v8zM8.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM10.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM12.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5zM14.5 10.5c-.2 0-.5.2-.5.5v6c0 .2.2.5.5.5s.5-.2.5-.5v-6c0-.2-.2-.5-.5-.5z"/>
-							</svg>
-						</a>
-					</div>
-				</div>
-
-			</div>
+			<div class="content" file-menu></div>
 		</div>
 
 		<div id="linemarker"></div>
@@ -334,19 +285,7 @@
 
 			<div id="tooltip"></div>
 			
-			<div class="storage-tools">
-				<span class="storage-status" v-bind:class="{ visible: isUrlStorage() }">
-					View mode, changes are not saved.
-					<a v-on:click.prevent="saveViewModeToStorage" href="/"
-					   title="Save this diagram to localStorage">save</a>
-					<a href="#" title="Discard this diagram">close</a>
-				</span>
-				
-				<span class="storage-status" v-bind:class="{ visible: isLocalFileStorage() }">
-					Editing local file
-					<a href="#" title="Exit from this file">close</a>
-				</span>
-			</div>
+			<div storage-tools></div>
 
 			<div class="canvas-tools" id="canvas-tools">
 				<div class="canvas-button">
@@ -373,72 +312,9 @@
 			</div>
 		</div>
 	</div>
-
-	<style>
-		.alert-list {
-			position: absolute;
-			bottom: 0;
-			right: 20px;
-			width: 300px;
-			z-index: 2;
-		}
-		.alert.alert-hidden {
-			display: none;
-		}
-		
-		.alert {
-			position: relative;
-			padding: 10px 20px;
-			margin: 0 0 20px 0;
-			font-family: sans-serif;
-			color: #444;
-			background: #fffcf4;
-			border-radius: 5px;
-			box-shadow: 0 5px 10px #0004;
-		}
-		.alert-close {
-			position: absolute;
-			top: 0;
-			right: 8px;
-			cursor: pointer;
-			font-size: 25px;
-		}
-	</style>
 	
-	<div class=alert-list>
-		<div class="alert alert-hidden">
-			<b>Got tabular data? Present it with tables!</b>
-			<pre>[&lt;table&gt;Fruits|
-  Apples  | 17   ||
-  Oranges | 4711
-]</pre>
-			<svg version="1.1" baseProfile="full" width="192" height="119" viewbox="0 0 192 119" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:ev="http://www.w3.org/2001/xml-events" style="font-weight:italic ; font-size:12pt; font-family:'Calibri', Helvetica, sans-serif;;stroke-linejoin:round;stroke-linecap:round">
-				<rect x="0" y="0" height="119" width="192" style="stroke:none; fill:transparent;"></rect>
-				<rect x="13.5" y="13.5" height="93" width="166" style="stroke:#33322E;fill:#eee8d5;stroke-dasharray:none;stroke-width:3;"></rect>
-				<text x="96.5" y="35" style="fill: #33322E;font-weight:bold;text-anchor: middle;">Fruits</text>
-				<text x="21.5" y="66" style="fill: #33322E;">Apples</text>
-				<text x="104.5" y="66" style="fill: #33322E;">17</text>
-				<text x="21.5" y="97" style="fill: #33322E;">Oranges</text>
-				<text x="104.5" y="97" style="fill: #33322E;">4711</text>
-				<path d="M13.5 44.5 L13.5 44.5" style="stroke:#33322E;fill:none;stroke-width:3;"></path>
-				<path d="M13.5 44.5 L179.5 44.5" style="stroke:#33322E;fill:none;stroke-width:3;"></path>
-				<path d="M13.5 75.5 L179.5 75.5" style="stroke:#33322E;fill:none;stroke-width:3;"></path>
-				<path d="M96.5 44.5 L96.5 106.5" style="stroke:#33322E;fill:none;stroke-width:3;"></path>
-				<path d="M179.5 44.5 L179.5 106.5" style="stroke:#33322E;fill:none;stroke-width:3;"></path>
-			</svg>
-			<a class=alert-close onclick="closeAlert()">&times;</a>
-		</div>
+	<div class=alert-list daily-tip>
 	</div>
-	
-	<script>
-		if (!localStorage['nomnoml.hide-notice.table']) {
-			document.querySelector('.alert').classList.remove('alert-hidden')
-		}
-		function closeAlert() {
-			document.querySelector('.alert').classList.add('alert-hidden')
-			localStorage['nomnoml.hide-notice.table'] = 'hide'
-		}
-	</script>
 
 	<script type="text/vnd.nomnoml.class" id="defaultGraph">[Pirate|eyeCount: Int|raid();pillage()|
   [beard]--[parrot]
@@ -468,26 +344,27 @@
 	<script src="codemirror/codemirror-compressed.js"></script>
 	<script src="codemirror/nomnoml.codemirror-mode.js"></script>
 	<script src="dist/nomnoml.web.js"></script>
-	
-	<script src="lib/vue.min.js"></script>
+
+	<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	<script src="dist/webapp.js"></script>
 	
 	<script>
 		var app = new App(nomnoml, CodeMirror, saveAs, _)
-		ExportMenu('[export-menu]', app)
-		FileMenu('[file-menu]', app)
-		StorageTools('.storage-tools', app)
+		var elem = query => document.querySelector(query)
+		render()
+		
+		function render() {
+			ReactDOM.render(React.createElement(FileMenu, { app }), elem('[file-menu]'))
+			ReactDOM.render(React.createElement(ExportMenu, { app }), elem('[export-menu]'))
+			ReactDOM.render(React.createElement(StorageTools, { app }), elem('[storage-tools]'))
+		}
+		
+		app.signals.on('source-changed', render)
+		app.filesystem.signals.on('updated', render)
 	</script>
 	
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<script src="additionals.js"></script>
 
-		ga('create', 'UA-50041909-1', 'nomnoml.com');
-		ga('send', 'pageview');
-
-	</script>
 </body>
 </html>
